--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   provider: ^6.1.5
   go_router: ^15.1.2
   window_manager: ^0.5.0
+  dio: ^5.3.3
+  path: ^1.8.2
+  webdav_client: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
