--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
-    - assets/default_bg.jpg
+    - assets/background/01.jpg
+    - assets/background/02.jpg
+    - assets/background/03.jpg
+    - assets/background/04.jpg
+    - assets/background/05.jpg
+    - assets/background/06.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
